styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&family=Russo+One&display=swap");

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
a {
  text-decoration: none;
  color: rgb(27, 27, 27);
  transition: 500ms all;
}
body {
  font-size: 16px;
  font-family: "Oswald", sans-serif;
  color: rgb(27, 27, 27);
}
footer .wrapper {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr 2fr 1fr;
  margin: 7em 3em 1.5em 3em;
  align-items: center;
  justify-items: center;
  font-weight: 400;
  text-transform: uppercase;
  font-size: 0.9em;
}
footer .wrapper .links li {
  list-style: none;
  display: inline;
  margin: 0 0.75em;
}
footer .wrapper .links a:hover {
  color: rgba(76, 201, 240, 1);
}
footer .wrapper .copyright {
  justify-self: end;
  font-size: 0.8em;
}
footer .wrapper .logo {
  justify-self: start;
  font-family: "Russo One", sans-serif;
  font-size: 1.5em;
}
#endrow {
  height: 0.8em;
  margin: 0 1em;
  background: rgb(247, 37, 133);
  background: linear-gradient(
    90deg,
    rgba(247, 37, 133, 1) 0%,
    rgba(247, 37, 133, 1) 20%,
    rgba(114, 9, 183, 1) 20%,
    rgba(114, 9, 183, 1) 40%,
    rgba(58, 12, 163, 1) 40%,
    rgba(58, 12, 163, 1) 60%,
    rgba(67, 97, 238, 1) 60%,
    rgba(67, 97, 238, 1) 80%,
    rgba(76, 201, 240, 1) 80%,
    rgba(76, 201, 240, 1) 100%
  );
  border-radius: 1em;
}
#contact {
  margin: 0 auto;
  width: calc(100vw - 6em);
}
#contact .social {
  display: grid;
  justify-items: center;
  align-items: center;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  width: 13em;
  margin: 0 auto;
  text-align: center;
}
#contact .social .item {
  width: 3em;
  height: 3em;
  border-radius: 50%;
  cursor: pointer;
}
#contact .social .item i {
  font-size: 1.6em;
  margin-top: 0.43em;
}
#contact .social .behance {
  background: #eff5f9;
  color: rgba(67, 97, 238, 1);
}
#contact .social .behance i {
  font-size: 1.4em;
  margin-top: 0.55em;
}
#contact .social .dribble {
  background: #fbeff5;
  color: rgba(247, 37, 133, 1);
}
#contact .social .instagram {
  background: #f2eaf9;
  color: rgba(114, 9, 183, 1);
}
#contact .data {
  text-align: center;
  margin: 0 0 3em 0;
  font-size: 1.5em;
}
#contact .data h3 {
  margin-bottom: 1.4em;
  letter-spacing: 0.03em;
  font-weight: 600;
  color: rgb(28, 5, 78);
}
#contact .data .mail {
  font-size: 1.1em;
  margin: 0.5em 0;
}
#contact .data .location,
#contact .data .number {
  color: #8b8b8b;
  font-weight: 400;
  font-size: 0.75em;
}
header {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr 1fr;
  margin: 2em 3em 4em 3em;
}
header .logo {
  font-family: "Russo One", sans-serif;
  font-size: 1.5em;
  justify-self: start;
  text-transform: uppercase;
  align-self: center;
}
header .content {
  justify-self: end;
}
header .content a {
  list-style: none;
  display: inline-block;
  margin: 0 0.75em;
  font-size: 1.1em;
  text-transform: uppercase;
  padding: 0 0.5em 0.3em 0.5em;
}
header .content a:first-child {
  margin-left: 0;
  border-bottom: 0.25em solid rgba(247, 37, 133, 1);
}
header .content a:first-child:hover {
  border-bottom-color: rgba(76, 201, 240, 1);
  transition: 500ms all;
  color: rgba(76, 201, 240, 1);
}
header .content a:nth-child(2) {
  border-bottom: 0.25em solid rgba(58, 12, 163, 1);
}
header .content a:nth-child(2):hover {
  border-bottom-color: rgba(67, 97, 238, 1);
  transition: 500ms all;
  color: rgba(67, 97, 238, 1);
}
header .content a:last-child {
  margin-right: 0;
  border-bottom: 0.25em solid rgba(76, 201, 240, 1);
}
header .content a:last-child:hover {
  border-bottom-color: rgba(247, 37, 133, 1);
  transition: 500ms all;
  color: rgba(247, 37, 133, 1);
}

